# utilitai

./: README.md  justfile  pyproject.toml
.github/workflows/: ensure-clean-code.yml  publish-to-pypi.yml
examples/: eat_sleep_forage.py
src/utilitai/: __init__.py  curves.py
tests/: test_builtin_responses.py
