[project]
name = "utilitai"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    { name = "Tim Lingard", email = "tklingard@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.14.1,<1.15.0",
    "pyrefly>=0.24.2",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
